0829-Chocolate_custom_screen4

--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -286,7 +286,7 @@
     </main>
     <script src="./js/Customization_two.js"></script>
     <script src="./js/Drag_function_two.js"></script>
-    <script src="./js/function_Block_Below.js"></script>
+    <!-- <script src="./js/function_Block_Below.js"></script> -->
 </body>
 
 </html>
