--- a/index.html
+++ b/index.html
@@ -146,20 +146,25 @@
             </div>
         </section>
         <section id="TASTE">
-            <div class="section_taste">
+
+            <div class="taste_l">
+                
+                <div class="box_br">
+                    <div class="arch"></div>
+                    <div class="text_all">
+                        <div class="text1">巧克力的世界無限可能。無論您是熱</div>
+                        <div class="text2">愛經典的黑巧克力，還是偏好細膩的</div>
+                        <div class="text3">牛奶巧克力，甚至是充滿驚喜的果仁和</div>
+                        <div class="text4">香料，我們都能滿足您的味蕾</div>
+                    </div>
+                </div>
                 <div class="cn_title">多樣化的口味自由搭配</div>
+            </div>
+            <div class="taste_r">
                 <img class="title" src="./index_images/taste-title.svg" alt="">
                 <img class="pic" src="./index_images/taste--pic.svg" alt="">
-                <div class="arch"></div>
-                <div class="box_br"></div>
-                <div class="text_all">
-                    <div class="text1">巧克力的世界無限可能。無論您是熱</div>
-                    <div class="text2">愛經典的黑巧克力，還是偏好細膩的</div>
-                    <div class="text3">牛奶巧克力，甚至是充滿驚喜的果仁和</div>
-                    <div class="text4">香料，我們都能滿足您的味蕾</div>
-                </div>
-
             </div>
+
         </section>
         <section id="APPERANCE">
             <div class="section_apperance">
