0830-Chocolate_custom_screen1

--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -137,7 +137,7 @@
                             <div id="full_list_box_left_box4_box1">
                                 <div id="full_list_box_left_box4_calendar">
                                     <img src="./images/shopping_cart_two/calendar.svg" alt="">
-                                
+
                                 </div>
                                 <div id="full_list_box_left_box4_box2">
                                     <div id="full_list_box_left_box4_box_date">
@@ -145,7 +145,8 @@
                                             <p>希望的配送日期</p>
                                         </div>
                                         <div>
-                                            <input type="date" placeholder="">
+                                            <input type="text" placeholder="">
+                                            <!-- <input type="date" placeholder=""> -->
                                         </div>
                                     </div>
                                     <div id="full_list_box_left_box4_box_shipping_time">
@@ -245,17 +246,39 @@
                             </div>
                         </div>
                     </div>
-                    <div id="full_list_box_right_order_box3">
-                        <div id="full_list_box_right_box2">
-                            <div id="full_list_box_right_box_details2">
-                                <p>訂單詳細</p>
-                                <img src="./images/shopping_cart_two/down.svg" alt="">
+                    <div>
+                        <div id="full_list_box_right_order_box3">
+                            <div id="full_list_box_right_box3">
+                                <div id="full_list_box_right_box_details2">
+                                    <p>訂單詳細</p>
+                                    <img src="./images/shopping_cart_two/down.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div id="full_list_box_right_box4">
+                            <div id="full_list_box_right_box3_divbox">
+                                <div id="full_list_box_right_box3_divbox_p1">
+                                    <p>板狀巧克力</p>
+                                    <img src="./images/shopping_cart_two/down.svg" alt="">
+                                </div>
+                                <div id="full_list_box_right_box3_divbox_p2">
+                                    <p>小巧克力</p>
+                                    <img src="./images/shopping_cart_two/down.svg" alt="">
+                                </div>
+                                <div id="full_list_box_right_box3_divbox_p3">
+                                    <p>禮盒</p>
+                                    <img src="./images/shopping_cart_two/down.svg" alt="">
+                                </div>
+                                <div id="full_list_box_right_box3_divbox_p4">
+                                    <p>卡片</p>
+                                    <img src="./images/shopping_cart_two/down.svg" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div id="full_list_box_right_order_box4">
                         <div>
-                            <img src="./images/shopping_cart_two/hr.svg" alt="">
+                            <img src="./images/shopping_cart_two/hr.svg" alt="" id="full_list_box_right_order_box4_img">
                         </div>
                     </div>
                     <div id="full_list_box_right_order_box5">
