--- a/index_測試動態用.html
+++ b/index_測試動態用.html
@@ -8,7 +8,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index_textForAnimate.css">
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
@@ -38,8 +38,18 @@
             </div>
             <div class="banner-content">
                 <div class="choc">
-                    <span class="title_white ">choc</span>
-                    <span class="title_br slide-up">choc</span>
+                    <span class="title_white  slide-up">
+                        <p class="slide-up">c</p>
+                        <p class="slide-up">h</p>
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">c</p>
+                    </span>
+                    <span class="title_br slide-up">
+                        <p class="slide-up">c</p>
+                        <p class="slide-up">h</p>
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">c</p>
+                    </span>
                 </div>
 
                 <div class="arch_wrap">
@@ -48,8 +58,20 @@
                 </div>
 
                 <div class="olate">
-                    <span class="title_white slide-up">olate</span>
-                    <span class="title_br slide-up">olate</span>
+                    <span class="title_white slide-up">
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">l</p>
+                        <p class="slide-up">a</p>
+                        <p class="slide-up">t</p>
+                        <p class="slide-up">e</p>
+                    </span>
+                    <span class="title_br slide-up">
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">l</p>
+                        <p class="slide-up">a</p>
+                        <p class="slide-up">t</p>
+                        <p class="slide-up">e</p>
+                    </span>
                 </div>
             </div>
         </section>
