--- a/index_測試動態用.html
+++ b/index_測試動態用.html
@@ -37,19 +37,29 @@
                 <img src="./index_images/logo.png" alt="">
             </div>
             <div class="banner-content">
-                <div class="choc">
-                    <span class="title_white  slide-up">
+                <div class="chocolate">
+                    <div class="title_white  slide-up">
                         <p class="slide-up">c</p>
                         <p class="slide-up">h</p>
                         <p class="slide-up">o</p>
                         <p class="slide-up">c</p>
-                    </span>
-                    <span class="title_br slide-up">
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">l</p>
+                        <p class="slide-up">a</p>
+                        <p class="slide-up">t</p>
+                        <p class="slide-up">e</p>
+                    </div>
+                    <div class="title_br slide-up">
                         <p class="slide-up">c</p>
                         <p class="slide-up">h</p>
                         <p class="slide-up">o</p>
-                        <p class="slide-up">c</p>
-                    </span>
+                        <p class="slide-up">c</p> 
+                        <p class="slide-up">o</p>
+                        <p class="slide-up">l</p>
+                        <p class="slide-up">a</p>
+                        <p class="slide-up">t</p>
+                        <p class="slide-up">e</p>
+                    </div>
                 </div>
 
                 <div class="arch_wrap">
@@ -57,21 +67,7 @@
                     <img class="circle_text" src="./index_images/banner--circle-text.svg" alt="">
                 </div>
 
-                <div class="olate">
-                    <span class="title_white slide-up">
-                        <p class="slide-up">o</p>
-                        <p class="slide-up">l</p>
-                        <p class="slide-up">a</p>
-                        <p class="slide-up">t</p>
-                        <p class="slide-up">e</p>
-                    </span>
-                    <span class="title_br slide-up">
-                        <p class="slide-up">o</p>
-                        <p class="slide-up">l</p>
-                        <p class="slide-up">a</p>
-                        <p class="slide-up">t</p>
-                        <p class="slide-up">e</p>
-                    </span>
+                
                 </div>
             </div>
         </section>
