--- a/index_測試動態用.html
+++ b/index_測試動態用.html
@@ -73,13 +73,13 @@
         </section>
         <section id="CUSTOMIZED">
 
-            <div class="cust_item">
+            <a  href="./Customization.html" class="cust_item">
                 <div class="step"><img src="./index_images/step1.png" alt=""></div>
                 <div class="step"><img src="./index_images/step2.png" alt=""></div>
                 <div class="step"><img src="./index_images/step3.png" alt=""></div>
-            </div>
+            </a>
             <div class="btn_wrap">
-                <a class="btn_diy" href="./customized.html">
+                <a class="btn_diy" href="./Customization.html">
                     <div class="btn_content">開始設計</div>
                 </a>
             </div>
@@ -223,7 +223,7 @@
 
 
 </main>
-<script src="./js/index2.js"></script>
+<script src="./js/index.js"></script>
 <script src="./js/Menu.js"></script>
 
 </body>
