--- a/index_測試動態用.html
+++ b/index_測試動態用.html
@@ -34,7 +34,7 @@
         <section id="BANNER">
 
             <div class="logo">
-                <img src="./index_images/Mélange.svg" alt="">
+                <img src="./index_images/logo.svg" alt="">
             </div>
             <div class="banner-content">
                 <div class="chocolate">
@@ -208,7 +208,7 @@
             </div>
             <div class="bottom">
                 <div class="bottom_content">
-                    <div><img src="./index_images/Mélange.svg" alt=""></div>
+                    <div><img src="./index_images/logo.svg" alt=""></div>
                     <div class="icon">
                         <a href="#"><img src="./index_images/icon_fb_b.svg" alt=""></a>
                         <a href="#"><img src="./index_images/icon_ig_b.svg" alt=""></a>
