--- a/index_測試動態用.html
+++ b/index_測試動態用.html
@@ -156,10 +156,10 @@
 
                     <div class="arch"></div>
                     <div class="text_all">
-                        <div class="text1">我們秉持著精益求精的態度，從全球各地</div>
-                        <div class="text2">精選最優質的可可豆，每一顆都經過</div>
-                        <div class="text3">嚴格篩選與手工處理，確保呈現給您的</div>
-                        <div class="text4">每一口都是純粹的享受。</div>
+                        <div class="text1 smoove" data-move-y="10px">我們秉持著精益求精的態度，從全球各地</div>
+                        <div class="text2 smoove1" data-move-y="10px">精選最優質的可可豆，每一顆都經過</div>
+                        <div class="text3 smoove2" data-move-y="10px">嚴格篩選與手工處理，確保呈現給您的</div>
+                        <div class="text4 smoove3" data-move-y="10px">每一口都是純粹的享受。</div>
                     </div>
                 </div>
             </div>
@@ -171,10 +171,10 @@
                 <div class="box_br">
                     <div class="arch"></div>
                     <div class="text_all">
-                        <div class="text1">巧克力的世界無限可能。無論您是熱</div>
-                        <div class="text2">愛經典的黑巧克力，還是偏好細膩的</div>
-                        <div class="text3">牛奶巧克力，甚至是充滿驚喜的果仁和</div>
-                        <div class="text4">香料，我們都能滿足您的味蕾</div>
+                        <div class="text1 smoove" data-move-y="10px">巧克力的世界無限可能。無論您是熱</div>
+                        <div class="text2 smoove1" data-move-y="10px">愛經典的黑巧克力，還是偏好細膩的</div>
+                        <div class="text3 smoove2" data-move-y="10px">牛奶巧克力，甚至是充滿驚喜的果仁和</div>
+                        <div class="text4 smoove3" data-move-y="10px">香料，我們都能滿足您的味蕾</div>
                     </div>
                     <div class="cn_title">多樣化的口味自由搭配</div>
                 </div>
@@ -196,11 +196,11 @@
                 <div class="box_br"></div>
 
                 <div class="text_all">
-                    <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
-                    <div class="text2">更是一件藝術品。</div>
-                    <div class="text3">無論是節日慶典還是重要場合</div>
-                    <div class="text4">都是表達心意的最佳選擇</div>
-                    <div class="text5">讓您的贈禮更添品味與心意</div>
+                    <div class="text1 smoove" data-move-y="10px">我們的巧克力不僅僅是味覺的饗宴</div>
+                    <div class="text2 smoove1" data-move-y="10px">更是一件藝術品。</div>
+                    <div class="text3 smoove2" data-move-y="10px">無論是節日慶典還是重要場合</div>
+                    <div class="text4 smoove3" data-move-y="10px">都是表達心意的最佳選擇</div>
+                    <div class="text5 smoove3" data-move-y="10px">讓您的贈禮更添品味與心意</div>
 
                 </div>
 
